User with multiple roles

--- a/FTBHungary.Api/appsettings.json
+++ b/FTBHungary.Api/appsettings.json
@@ -8,6 +8,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=3306;Database=ftbhungary;Uid=root;Pwd=admin;"
   },
+
+  "Jwt": {
+    "Key": "nBGhCYUN83scLjFzm4pk",
+    "Issuer": "https://localhost:44318/",
+    "Audience": "https://localhost:44318/"
+  },
+  
+  
   "AllowedHosts": "*",
   "ActivityLog": {
     "Using": [
