--- a/FTBHungary.Logic/FTBHungary.Logic.csproj
+++ b/FTBHungary.Logic/FTBHungary.Logic.csproj
@@ -13,4 +13,8 @@
       <ProjectReference Include="..\FTBHungary.PlayerDataAccess\FTBHungary.PlayerDataAccess.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
+    </ItemGroup>
+
 </Project>
