Auth with jwt works, register login dto,

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ riderModule.iml
 /FTBHungary.DataAccess/bin
 /FTBHungary.Logic/obj
 /FTBHungary.Logic/bin
+/FTBHungary.PlayerDataAccess/bin
+/FTBHungary.PlayerDataAccess/obj
